# armstrong-num-calculator

./: .flaskenv  .gitignore  config.py  main.py  package.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  blueprints.py  context_processors.py  seed.py
app/enums/: __init__.py  auth.py
app/error_handlers/web/: __init__.py  db.py  http.py  unexpected.py
app/extensions/: __init__.py  login.py
app/middleware/: __init__.py  after_request.py  before_request.py
app/models/: __init__.py  attempt.py  base.py  feedback.py  media.py  role.py  user.py  wallet.py
app/resources/static/public/css/: globals.css  output.css
app/resources/static/public/js/: alert.js  script.js
app/resources/templates/public/base/: index.html
app/resources/templates/public/components/: alert_modal.html  form_section.html  header.html  modal.html  pagination.html  sidebar.html
app/resources/templates/public/macros/: alerts.html  buttons.html  cards.html  empty_states.html  forms.html  (+3 more)
app/routes/: __init__.py
app/routes/admin/: __init__.py
app/routes/public/: __init__.py
app/routes/public/auth/: __init__.py  routes.py
app/routes/public/calculator/: __init__.py  routes.py
app/routes/public/contact/: __init__.py  routes.py
app/routes/public/home/: __init__.py  routes.py
app/routes/public/settings/: __init__.py  routes.py
app/utils/: armstrong.py  date_time.py
app/utils/decorators/: __init__.py  auth.py  retry.py  timing.py
app/utils/helpers/: api_response.py  basics.py  loggers.py  media.py  money.py  roles.py  site.py  uuid_helpers.py  validate.py
(+10 files in other folders)
